# ECE-650--VERTEX-COVER-ALGO

./: README.md
a1-ece650/: 187446-135183-TanejaKunal-20790967-output.txt  a1ece650.py
a2-ece650/: CMakeLists.txt  a2-ece650.cpp  graph.cpp  graph.h  user.yml
a3-ece650/: CMakeLists.txt  a1-ece650.py  a2-ece650.cpp  a3-ece650.cpp  rgen.cpp
a4-ece650/: CMakeLists.txt  a4-ece650.cpp  graph.cpp  graph.h  minvc.cpp  minvc.h
a5-ece650/: CMakeLists.txt  avc1.cpp  avc2.cpp  minvc.cpp  prj-ece650.cpp  user.yml
